| Summary: | ASTERISK-22952: res_pjsip_pubsub: crash when subscription_destructor is terminated from a non-PJSIP thread | ||||
| Reporter: | Matt Jordan (mjordan) | Labels: | |||
| Date Opened: | 2013-12-08 22:45:38.000-0600 | Date Closed: | 2013-12-23 20:20:31.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_pjsip Resources/res_pjsip_pubsub | ||
| Versions: | 12.0.0-beta2 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) backtrace_8407.txt | |||
| Description: | When Asterisk is shut down, the pbx core will destroy the existing hints. This can cause a call to destroy_hint, which trigggers subscription_destructor from an Asterisk thread. Because this isn't synchronized over to a PJSIP thread, PJSIP throws an assertion causing a crash.
See attached backtrace. Note that this was caused by the pjsip/ami/show_subscriptions test, although it certainly doesn't happen on every execution. | ||||
| Comments: | |||||